@@ -1,4 +1,4 @@
-Copyright (c) 2001, 2009 NoMachine - http://www.nomachine.com/.
+Copyright (c) 2001, 2010 NoMachine - http://www.nomachine.com/.
 
 NXAUTH and NX extensions to X are copyright of NoMachine.
 
