@@ -1,5 +1,9 @@
 ChangeLog:
 
+nxauth-3.4.0-2
+
+- Updated copyright to year 2010.
+
 nxauth-3.4.0-1
 
 - Opened the 3.4.0 branch based on nxauth-3.3.0-1.
